--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
                 <h1><a href=".">Yelshat Duskaliev</a></h1>
                 <br>
                 <p class="view"><a href="projects.html">My works</a></p>
-                <strike><p class="view"><a href="#">My CV (pdf)</a></p></strike>
+                <p class="view"><a href="cv.pdf">My CV (pdf)</a></p>
                 <h3>On the web</h3>
                 <p class="view"><a href="http://vk.com/semior001">VK</a></p>
                 <p class="view"><a href="http://github.com/semior001">Github</a></p>
