Changed CV and photo on index page

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             </header>
             <section id="main">
                 <p align="right" style="font-size:80%;color:#CCCCCC;"><br></p>
-                <img src="img/hackday.jpg">
-                <p class="view">It's me on Hackday 2016, Almaty, Kazakhstan</p>
+                <img src="img/dataforchildren.jpg">
+                <p class="view">The guy with microphone - it is me on an international forum Data for children, Astana, Kazakhstan 2018</p>
                 <p>I'm a software developer, gamemaker, web-developer, enterpreneur, creator of most telegram-bots and just a good man :)<br>
                 Now I study and work at <a href="http://fml166.kz">Physics and mathematics lyceum #166</a> in Almaty, Kazakhstan</p>
             </section>
