--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <img src="img/dataforchildren.jpg">
                 <p class="view">The guy with microphone - it is me on an international forum Data for children, Astana, Kazakhstan 2018</p>
                 <p>I'm a software developer, gamemaker, web-developer, enterpreneur, creator of most telegram-bots and just a good man :)<br>
-                Now I study and work at <a href="http://fml166.kz">Physics and mathematics lyceum #166</a> in Almaty, Kazakhstan</p>
+                Now I study at <a href="http://kbtu.kz">Kazakh-British Technical University</a> in Almaty, Kazakhstan</p>
             </section>
         </div>
         
