--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
                 <p class="view"><a href="http://hackerrank.com/semior001">Hackerrank</a></p>
                 <p class="view"><a href="http://acmp.ru/index.asp?main=user&id=162279">ACMP</a></p>
                 <h3>My mail</h3>
-                <p class="view"><a href="mail:yelshat.duskaliev@fml166.kz">yelshat.duskaliev@fml166.kz</a></p>
+                <p class="view"><a href="mail:ura2178@gmail.com">ura2178@gmail.com</a></p>
             </header>
             <section id="main">
                 <p align="right" style="font-size:80%;color:#CCCCCC;"><br></p>
