--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <h3>On the web</h3>
                 <p class="view"><a href="http://vk.com/semior001">VK</a></p>
                 <p class="view"><a href="http://github.com/semior001">Github</a></p>
+                <p class="view"><a href="https://hh.kz/applicant/resumes/view?resume=03f4d0a0ff038da4f60039ed1f504e68766e4f">HeadHunter</a></p>
                 <h3>In competitive programming</h3>
                 <p class="view"><a href="http://codeforces.com/profile/semior001">Codeforces</a></p>
                 <p class="view"><a href="http://informatics.mccme.ru/user/view.php?id=190610">Informatics.MCCME</a></p>
