--- a/projects.html
+++ b/projects.html
@@ -42,15 +42,15 @@
                 <h2>2018</h2>
                 <p>
                 <ul>
-                    <li>Digital book of Complaints and Suggestions project in <a href="https://technodom.kz">JSC Technodom Operator</a> </li>
-                    <li>Android application + Python Flask microservice for Check Kaspi Bank Order in <a href="https://technodom.kz">JSC Technodom Operator</a> </li>
+                    <li>Digital book of Complaints and Suggestions project in <a href="https://technodom.kz">Technodom Operator JSC</a> </li>
+                    <li>Android application + Python Flask microservice for Check Kaspi Bank Order in <a href="https://technodom.kz">Technodom Operator JSC</a> </li>
                 </ul>
                 </p>
 
                 <h2>2019</h2>
                 <p>
                 <ul>
-                    <li>Telegram Bot for internal usage in <a href="https://technodom.kz">JSC Technodom Operator</a> </li>
+                    <li>Telegram Bot for internal usage in <a href="https://technodom.kz">Technodom Operator JSC</a> </li>
                 </ul>
                 </p>
 
