fixed footer info

--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
 
 
 
-                <p>I'm a software developer, gamemaker, web-developer, enterpreneur, creator of most telegram-bots and just a good man :)<br>
+                <p>I'm a software developer, gamemaker, web-developer, enterpreneur and just a good man :)<br>
                 Now I study at <a href="http://kbtu.kz">Kazakh-British Technical University</a> in Almaty, Kazakhstan and work at <a href="https://technodom.kz">JSC Technodom Operator</a> as Junior developer in Almaty, Kazakhstan</p>
             </section>
         </div>
