--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                 <p align="right" style="font-size:80%;color:#CCCCCC;"><br></p>
                 <img src="img/dataforchildren.jpg">
                 <p class="view">The guy with microphone - it is me on an international forum Data for children, Astana, Kazakhstan 2018</p>
-                <p>I'm a software developer, gamemaker, web-developer, enterpreneur, creator of most telegram-bots and just a good man :)<br>
+                <p>I'm a software developer, gamemaker, web-developer, enterpreneur and just a good man :)<br>
                 Now I study at <a href="http://kbtu.kz">Kazakh-British Technical University</a> in Almaty, Kazakhstan and work at <a href="https://technodom.kz">JSC Technodom Operator</a> as Junior developer in Almaty, Kazakhstan</p>
             </section>
         </div>
-        
+
     </body>
 </html>
