--- a/projects.html
+++ b/projects.html
@@ -34,6 +34,9 @@
 
                 <h2>2016</h2>
                 <p>
+
+                    <img src="img/schoolWebSite.jpg">
+
                 <ul>
                     <li>Co-developer of <a href="http://fml166.kz">Physics and mathematics lyceum #166</a> web-site</li>
                 </ul>
