--- a/projects.html
+++ b/projects.html
@@ -34,19 +34,27 @@
 
                 <h2>2016</h2>
                 <p>
-
-                    <img src="img/schoolWebSite.jpg">
-
                 <ul>
-                    <li>Co-developer of <a href="http://fml166.kz">Physics and mathematics lyceum #166</a> web-site</li>
+                    <li>Co-developer of <a href="http://fml166.kz">Physics and mathematics lyceum #166</a> web-site
+                        <br><br>
+                        <img src="img/schoolWebSite.jpg" alt="website screenshot">
+                    </li>
                 </ul>
                 </p>
 
                 <h2>2018</h2>
                 <p>
                 <ul>
-                    <li>Digital book of Complaints and Suggestions project in <a href="https://technodom.kz">Technodom Operator JSC</a> </li>
-                    <li>Android application + Python Flask microservice for Check Kaspi Bank Order in <a href="https://technodom.kz">Technodom Operator JSC</a> </li>
+                    <li>Digital book of Complaints and Suggestions project in <a href="https://technodom.kz">Technodom Operator JSC</a>
+                        <br><br>
+                        <img src="img/eko_stand.jpeg" alt="tablet with application">
+                        <br><br>
+                        <img src="img/eko_admin.png" alt="admin website application">
+                    </li>
+                    <li>Android application + Python Flask microservice for Check Kaspi Bank Order in <a href="https://technodom.kz">Technodom Operator JSC</a>
+                        <br><br>
+                        <center><img style="width: 50%; height: 50%;" src="img/kaspi_check_app.jpg" alt="kaspi check android application"></center>
+                    </li>
                 </ul>
                 </p>
 
@@ -54,6 +62,8 @@
                 <p>
                 <ul>
                     <li>Telegram Bot for internal usage in <a href="https://technodom.kz">Technodom Operator JSC</a> </li>
+                    <br><br>
+                    <center><img style="width: 50%; height: 50%;" src="img/tgbot.jpeg" alt="telegram bot for internal usage"></center>
                 </ul>
                 </p>
 
