--- a/projects.html
+++ b/projects.html
@@ -70,7 +70,7 @@
 
 
                 <p>I'm a software developer, gamemaker, web-developer, enterpreneur and just a good man :)<br>
-                Now I study at <a href="http://kbtu.kz">Kazakh-British Technical University</a> in Almaty, Kazakhstan and work at <a href="https://technodom.kz">JSC Technodom Operator</a> as Junior developer in Almaty, Kazakhstan</p>
+                Now I work at <a href="https://technodom.kz">JSC Technodom Operator</a> as Junior developer in Almaty, Kazakhstan</p>
             </section>
         </div>
 
