--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <body id="index">
         <div class="wrapper">
             <header>
-                <h1><a href=".">Yelshat Duskaliev</a></h1>
+                <h1><a href="./index.html">Yelshat Duskaliev</a></h1>
                 <br>
                 <p class="view"><a href="projects.html">My works</a></p>
                 <p class="view"><a href="cv.pdf">My CV (pdf)</a></p>
@@ -46,7 +46,7 @@
                 <img src="img/dataforchildren.jpg">
                 <p class="view">The guy with microphone - it is me on an international forum Data for children, Astana, Kazakhstan 2018</p>
                 <p>I'm a software developer, gamemaker, web-developer, enterpreneur and just a good man :)<br>
-                Now I work at <a href="https://technodom.kz">JSC Technodom Operator</a> as Junior developer in Almaty, Kazakhstan</p>
+                Now I study at <a href="https://university.innopolis.ru">Innopolis University</a> for Bachelor's degree of Computer Science</p>
             </section>
         </div>
 
