--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
     <body id="index">
         <div class="wrapper">
             <header>
-                <h1><a href=".">Yelshat Duskaliev</a></h1>
+                <h1><a href="./index.html">Yelshat Duskaliev</a></h1>
                 <br>
                 <p class="view"><a href="projects.html">My works</a></p>
                 <p class="view"><a href="cv.pdf">My CV (pdf)</a></p>
@@ -84,7 +84,7 @@
 
 
                 <p>I'm a software developer, gamemaker, web-developer, enterpreneur and just a good man :)<br>
-                Now I work at <a href="https://technodom.kz">JSC Technodom Operator</a> as Junior developer in Almaty, Kazakhstan</p>
+                Now I study at <a href="https://university.innopolis.ru">Innopolis University</a> for Bachelor's degree of Computer Science</p>
             </section>
         </div>
 
