--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             </header>
             <section id="main">
                 <p align="right" style="font-size:80%;color:#CCCCCC;"><br></p>
-                <img src="img/dataforchildren.jpg">
-                <p class="view">The guy with microphone - it is me on an international forum Data for children, Astana, Kazakhstan 2018</p>
+                <img src="img/t.png">
+                <p class="view">It is me on the VK Hackathon, Saint Petersburg, Russia 2019</p>
                 <p>I'm a software developer, gamemaker, web-developer, enterpreneur and just a good man :)<br>
                 Now I study at <a href="https://university.innopolis.ru">Innopolis University</a> for Bachelor's degree of Computer Science</p>
             </section>
