--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <body id="index">
         <div class="wrapper">
             <header>
-                <h1><a href="./index.html">Yelshat Duskaliev</a></h1>
+                <h1><a href="./index.html">Yelshat Duskaliyev</a></h1>
                 <br>
                 <p class="view"><a href="projects.html">My works</a></p>
                 <p class="view"><a href="cv.pdf">My CV (pdf)</a></p>
