--- a/projects.html
+++ b/projects.html
@@ -83,7 +83,7 @@
 
 
 
-                <p>I'm a software developer, gamemaker, web-developer, enterpreneur and just a good man :)<br>
+                <p>I'm a software, mobile, and web-developer and just a good man :)<br>
                 Now I study at <a href="https://university.innopolis.ru">Innopolis University</a> for Bachelor's degree of Computer Science</p>
             </section>
         </div>
