--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <p align="right" style="font-size:80%;color:#CCCCCC;"><br></p>
                 <img src="img/t.png">
                 <p class="view">It is me on the VK Hackathon, Saint Petersburg, Russia 2019</p>
-                <p>I'm a software developer, gamemaker, web-developer, enterpreneur and just a good man :)<br>
+                <p>I'm a software, mobile, and web-developer and just a good man :)<br>
                 Now I study at <a href="https://university.innopolis.ru">Innopolis University</a> for Bachelor's degree of Computer Science</p>
             </section>
         </div>
