updated gencv, added pdf generation

--- a/gencv/tmpl.html
+++ b/gencv/tmpl.html
@@ -5,7 +5,7 @@
     <title>Yelshat Duskaliyev</title>
     <style type="text/css">
         body {
-            font-size: 15px;
+            font-size: 14px;
             color: #32373F;
             word-wrap: break-word;
             line-height: 1.6em;
@@ -18,6 +18,21 @@
         td, th {
             text-align: left;
             padding: .5em 1em .5em 1em;
+        }
+        a {
+            text-decoration: none;
+            position: relative;
+        }
+        a:after {
+            content: '';
+
+            width: 100%;
+            position: absolute;
+            left: 0;
+            bottom: 1px;
+
+            border-width: 0 0 1px;
+            border-style: solid;
         }
     </style>
 </head>
