fixed cv: tool does not render blockquotes

--- a/gencv/tmpl.html
+++ b/gencv/tmpl.html
@@ -5,7 +5,7 @@
     <title>Yelshat Duskaliyev</title>
     <style type="text/css">
         body {
-            font-size: 14px;
+            font-size: 13px;
             color: #32373F;
             word-wrap: break-word;
             line-height: 1.6em;
@@ -33,6 +33,12 @@
 
             border-width: 0 0 1px;
             border-style: solid;
+        }
+        blockquote {
+            border-left: 3px solid #e5e5e5;
+            margin: -13px 0 0;
+            padding: 0 0 0 10px;
+            font-style: italic;
         }
     </style>
 </head>
