fixed link to avatar in cv, refactored gencv a bit

--- a/english_signature.html
+++ b/english_signature.html
@@ -29,7 +29,7 @@
             </tr>
             <tr>
                 <td style="padding-left: 15px" colspan="2">
-                    First-year student, Group BS19-04 <br><br>
+                    Third-year student, Group BS19-04 <br><br>
                 </td>
             </tr>
             <tr>
